[gd_scene load_steps=3 format=3 uid="uid://doxr3hbj6jlgf"]

[ext_resource type="Script" path="res://UI/Launcher/XRFlat_Launcher.gd" id="1_e70id"]

[sub_resource type="Theme" id="1"]

[node name="Launcher" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e70id")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
offset_right = 1152.0
offset_bottom = 648.0
size_flags_vertical = 3
alignment = 1

[node name="XR" type="Button" parent="Panel/HBoxContainer"]
offset_right = 518.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("1")
text = "XR"

[node name="FirstPerson" type="Button" parent="Panel/HBoxContainer"]
offset_left = 522.0
offset_right = 1041.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("1")
text = "Flat"

[node name="ThirdPerson" type="Button" parent="Panel/HBoxContainer"]
offset_left = 1045.0
offset_right = 1152.0
offset_bottom = 648.0
text = "Third Person"

[connection signal="pressed" from="Panel/HBoxContainer/XR" to="." method="launch_xr_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/FirstPerson" to="." method="launch_fps_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/ThirdPerson" to="." method="launch_tps_button_pressed"]
